<?xml version="1.0" encoding="utf-8"?>
<com.meta.metacomponents.views.MetaConstrainsWhiteView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.meta.metacomponents.views.MetaConstrainsWhiteView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.meta.metacomponents.textview.MetaTextView
                android:id="@+id/title_support_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/title_support"
                android:textColor="@color/Bajio"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="42dp"
                android:background="@drawable/background_stroke"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_support_textView">

                <include
                    android:id="@+id/containerDataSimple"
                    layout="@layout/no_data_simple_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_support"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/copyright"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.meta.metacomponents.textview.NormalTextView
                android:id="@+id/subtitle_helper_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="42dp"
                android:text="@string/subtitle_support"
                android:gravity="center"
                android:textColor="@color/Bajio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerView" />

            <LinearLayout
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="98dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="98dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtitle_helper_textView">

                <LinearLayout
                    android:background="@android:color/transparent"
                    android:id="@+id/button_whats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/whats"
                        android:contentDescription="@string/copyright"/>
                    <com.meta.metacomponents.textview.NormalTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/meta_phone"
                        android:textColor="@color/Leon"
                        android:gravity="center"
                        app:fontName="1"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@android:color/transparent"
                    android:id="@+id/button_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_vertical">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/phone"
                        android:contentDescription="@string/copyright"/>
                    <com.meta.metacomponents.textview.NormalTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/meta_phone"
                        android:textColor="@color/Queretaro"
                        android:gravity="center"
                        app:fontName="1"/>
                </LinearLayout>


            </LinearLayout>

        </com.meta.metacomponents.views.MetaConstrainsWhiteView>

    </ScrollView>




</com.meta.metacomponents.views.MetaConstrainsWhiteView>